# Calendar

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  platformio.ini  sdkconfig.debug  sdkconfig.release
.github/: copilot-instructions.md
.github/workflows/: firmware.yaml  pio-firmware.yaml
data/: settings.json  settings_default.json
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp  webdav_example.c__  wifi_connect.cpp  wifi_connect.h
main/CalDAV/: caldav.cpp  caldav.h
main/Devices/: devices.h
main/Devices/ADC/: adc.cpp  adc.h
main/Devices/I2C/: i2c.cpp  i2c.h
main/Devices/RTC/: bm8563.cpp  bm8563.h
main/EventManager/: eventManager.cpp  eventManager.h  eventTypes.h
main/Export/fonts/: custom_fonts.h  lv_font_montserrat_ext_12.c  lv_font_montserrat_ext_14.c  lv_font_montserrat_ext_18.c  lv_font_montserrat_ext_20.c  lv_font_montserrat_ext_22.c  lv_font_montserrat_ext_24.c  lv_font_montserrat_ext_28.c  lv_font_montserrat_ext_40.c
main/SNTP/: sntp.cpp  sntp.h
main/Settings/: settingsManager.cpp  settingsManager.h  settingsTypes.h
main/Settings/Private/: settingsDefaultLoader.cpp  settingsJSONLoader.cpp  settingsLoader.h
main/TimeManager/: timeManager.cpp  timeManager.h
main/UI/: eventView.cpp  eventView.h  ui.cpp  ui.h  ui_dashboard.cpp  ui_dayview.cpp  ui_status.cpp
main/WiFi/: wifi.cpp  wifi.h
scripts/: clean.py  format.py
